--- a/admindashboard.html
+++ b/admindashboard.html
@@ -225,8 +225,8 @@ const pages = {
           Tables and chairs<br>
           <button class="view-btn">View Data</button>
         </div>
-        <div class="card" onclick="openDataModal('Atan&apos;s Meat Shop')">
-          Atan's Meat Shop<br>
+        <div class="card" onclick="openDataModal('Atan Meat Shop')">
+          Atan Meat Shop<br>
           <button class="view-btn">View Data</button>
         </div>
       </div>
