--- a/admindashboard.html
+++ b/admindashboard.html
@@ -257,25 +257,25 @@ const pages = {
           <td><a href="#" class="ref-link">RPT-001</a></td>
           <td>Daisy Poultry</td><td>MEAT SHOP</td><td>James</td><td>Quezon City</td>
           <td>Muñoz</td><td>12:00 am - 2:00 pm</td><td>Filed</td>
-          <td>0970-567-1136</td><td>₱4,000.00</td><td>★★★★★</td><td>⛔ Delayed</td>
+          <td>0970-567-1136</td><td>₱4,000.00</td><td> data-stars="5"</td><td>⛔ Delayed</td>
         </tr>
         <tr>
           <td><a href="#" class="ref-link">RPT-002</a></td>
           <td>Takoyaki Supplier</td><td>SUPPLIES SHOP</td><td>Maria</td><td>Makati</td>
           <td>Muñoz</td><td>7:00 am - 9:00 am</td><td>None</td>
-          <td>0917-888-9999</td><td>₱2,500.00</td><td>★★★★★</td><td>✅ Completed</td>
+          <td>0917-888-9999</td><td>₱2,500.00</td><td> data-stars="5"</td><td>✅ Completed</td>
         </tr>
         <tr>
           <td><a href="#" class="ref-link">RPT-003</a></td>
           <td>Catering Supplies</td><td>CATERING</td><td>Sofia</td><td>Taguig</td>
           <td>Muñoz</td><td>10:00 am - 12:00 pm</td><td>None</td>
-          <td>0920-555-4444</td><td>₱3,200.00</td><td>★★★★★</td><td>✏ In progress</td>
+          <td>0920-555-4444</td><td>₱3,200.00</td><td> data-stars="5"</td><td>✏ In progress</td>
         </tr>
         <tr>
           <td><a href="#" class="ref-link">RPT-004</a></td>
           <td>Party Rental</td><td>RENTAL SHOP</td><td>Ramon</td><td>Manila</td>
           <td>Muñoz</td><td>3:00 am - 5:00 am</td><td>None</td>
-          <td>0998-222-3333</td><td>₱5,000.00</td><td>★★★★★</td><td>✅ Completed</td>
+          <td>0998-222-3333</td><td>₱5,000.00</td><td> data-stars="5"</td><td>✅ Completed</td>
         </tr>
       </tbody>
     </table>
