--- a/admindashboard.html
+++ b/admindashboard.html
@@ -286,10 +286,10 @@ Inspection: `
       <td>Very Good</td>
     </tr>
     <tr>
-      <td>Daisy Poultry</td>
+      <td>Sound Equipment</td>
       <td>Fair</td>
       <td>Good</td>
-      <td>Poor</td>
+      <td>Fair</td>
       <td>Fair</td>
       <td>Good</td>
       <td>Good</td>
@@ -297,10 +297,22 @@ Inspection: `
       <td>Good</td>
       <td>Fair</td>
     </tr>
+    <tr>
+      <td>Tables and Chairs</td>
+      <td>Good</td>
+      <td>Fair</td>
+      <td>Good</td>
+      <td>Good</td>
+      <td>Fair</td>
+      <td>Good</td>
+      <td>Good</td>
+      <td>Fair</td>
+      <td>Good</td>
+    </tr>
   </tbody>
 </table>
- `,
-
+`,
+  
   Supply: `
     <h1>Supply Monitoring</h1>
     <input type="text" id="supplySearch" placeholder="Search Supply…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
