--- a/admindashboard.html
+++ b/admindashboard.html
@@ -101,6 +101,15 @@ th{font-size:.85rem;opacity:.7}
 </div>
 
 <script>
+  function saveToStorage(key, data){
+  localStorage.setItem(key, JSON.stringify(data));
+}
+
+function loadFromStorage(key, defaultValue){
+  const data = localStorage.getItem(key);
+  return data ? JSON.parse(data) : defaultValue;
+}
+  
 const overlay = document.getElementById("overlay");
 const contentArea = document.getElementById("contentArea");
 let pipelineChart = null;
